--- a/install
+++ b/install
@@ -342,7 +342,11 @@ if [[ "$installer" == "aconly" ]]; then
 
 	# Modify nodecliac.acdef for aconly.
 	echo " - Modifying nodecliac.acdef for 'aconly' install..."
-	perl -i -lne 'if (/^(#|\.(print|registry|status|uninstall) --| )/) { if ($1 eq " ") { print "\n --"} elsif ($1 eq ".uninstall --") { print "$1" } else { print } }' ~/.nodecliac/registry/nodecliac/nodecliac.acdef
+	# Remove all but the following commands.
+	allowed_commands="add|remove|link|unlink|enable|disable|print|status|registry|uninstall"
+	perl -i -lne 'if (/^(#|\.('"$allowed_commands"') --| )/) { if ($1 eq " ") { print "\n --"} elsif ($1 eq ".uninstall --") { print "$1" } else { print } }' ~/.nodecliac/registry/nodecliac/nodecliac.acdef
+	# Add back '--version'.
+	perl -p -i -e 's/^ \-\-/ \-\-version?/m if /^ /' ~/.nodecliac/registry/nodecliac/nodecliac.acdef
 	log " $CHECK_MARK Modified nodecliac.acdef for 'aconly' install."
 
 	# Create bin file.
