update: Save version to .setup.db.json when setting up/installing

--- a/install
+++ b/install
@@ -311,7 +311,9 @@ if [[ "$installer" == "aconly" ]]; then
 
 	# Create setup file.
 	echo " - Creating ~/.nodecliac/.setup.db.json file..."
-	echo "{ \"force\": false, \"rcfilepath\": \"$rcfilepath\", \"time\": \"$timestamp\", \"aconly\": true }" > ~/.nodecliac/.setup.db.json
+	# Get package.json version number. [https://stackoverflow.com/a/4794172]
+	version="$(perl -ne 'print $1 if /"version":\s*"([^"]+)/' package.json)"
+	echo "{ \"force\": false, \"rcfilepath\": \"$rcfilepath\", \"time\": \"$timestamp\", \"aconly\": true, \"version\": \"$version\" }" > ~/.nodecliac/.setup.db.json
 	log " $CHECK_MARK Created ~/.nodecliac/.setup.db.json."
 
 	# Strip comments/empty lines from files.
