--- a/install
+++ b/install
@@ -374,7 +374,7 @@ else
 		echo " - Installing nodecliac via npm..."
 		# Global installs can't install shorthand branch method: [https://stackoverflow.com/a/32436218]
 		# sudo npm i -g "cgabriel5/nodecliac#$branch_name" > /dev/null 2>&1
-		sudo npm i -g https://github.com/cgabriel5/nodecliac/tarball/master > /dev/null 2>&1
+		sudo npm i -g https://github.com/cgabriel5/nodecliac/tarball/"$branch_name" > /dev/null 2>&1
 		log " $CHECK_MARK nodecliac installed."
 	elif [[ "$installer" == "yarn" ]]; then
 		echo " - Installing nodecliac via yarn..."
