update: Add trailing slash to path

--- a/install
+++ b/install
@@ -307,7 +307,7 @@ if [[ "$installer" == "binary" ]]; then
 	# Copy over platform specific nodecliac binary.
 	ncliac_binfilepath="$outputdir/nodecliac/src/parser/nim/nodecliac.$platform"
 	if [[ -f "$ncliac_binfilepath" ]]; then
-		cp -pr "$ncliac_binfilepath" ~/.nodecliac/src/bin
+		cp -pr "$ncliac_binfilepath" ~/.nodecliac/src/bin/
 	fi
 
 	log " $CHECK_MARK Copied nodecliac scripts."
